tdf#154789 EMF+ Performance boost of the EmfPlusRecordTypeDrawBeziers

There is several benefits of such performance optimization:
 1. We are drawing single curve instead of hundreds of small curves.
    In the loop we are creating single Polygon and outside
    of the loop we are invoking EMFPPlusDrawPolygon drawing method only
    once. As https://bugs.documentfoundation.org/attachment.cgi?id=186725
    image is using single EmfPlusRecordTypeDrawBeziers EMF+ record with
    hundreds of curves, with using single EMFPPlusDrawPolygon call,
    there is no lnger need for individual line creation (e.g. line
    color, weight, line caps, line joints, line dashes, etc.)

    - The PDF export performance without optimizations of the https://bugs.documentfoundation.org/attachment.cgi?id=186725:

        time ./instdir/program/soffice --headless --convert-to "pdf:writer_pdf_Export" --outdir ~ ~/Pobrane/problem.docx
        real 24m18,471s
        user 2m56,004s
        sys 1m37,816

    - The PDF export performance with optimizations:

        real 0m37,527s
        user 0m37,004s
        sys 0m0,531s

    - With Libreoffice 7.5.2 from Ubuntu 22.04, the conversion was
    crashed.

 2. The PDF export for document: https://bugs.documentfoundation.org/attachment.cgi?id=186725
    was not working correctly for me. The original image is containing
    chart. Without optimization, the exported chart was empty.
    Current export is working correctly, and graph is visible.

 3. The standard opening of the document from https://bugs.documentfoundation.org/attachment.cgi?id=186725
    is now much faster. The zooming in, move image operations are also
    noticible faster.

 4. Implementation is according to [MS-EMFPLUS] documentation of the
    EmfPlusDrawBeziers, which states:
    "The ending coordinate of one Bezier curve is the starting coordinate of the
next. The control points are used for producing the Bezier effect."

Change-Id: Ic77d4c20a462587bb5da4a4df757e30c5ca04fc9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150821
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit ce008fa9d8f2752bdfeaeff763aafc774a4b4fb2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150789
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit a30b9314fb011736ccd12c8d3d29514c172a5b17)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151029
Tested-by: Bartosz Kosiorek <gang65@poczta.onet.pl>